<resources xmlns:tools="http://schemas.android.com/tools" >
    <string translatable="false" name="app_name">Mobile Trade 3.109</string>
    <string translatable="false" name="app_label">Mobile Trade 3.109</string>
    <string translatable="false" name="nav_header_title">MTrade 3.109</string>
    <string translatable="false" name="nav_header_subtitle">denisbds71@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search_hint">Search hint!</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_backup">Backup to SD card</string>
    <string name="action_acuum_database">Pack database</string>
    <string name="action_create_order">Create order</string>
    <string name="action_create_refund">Create refund</string>
    <string name="action_create_distribs">Create distibution</string>
    <string name="action_create_payment">Create payment</string>
    <string name="action_copy_order">Copy order</string>
    <string name="action_copy_refund">Copy refund</string>
    <string name="action_copy_order_to_refund">Copy order to refund</string>
    <string name="action_copy_payment">Copy payment</string>
    <string name="action_delete_order">Delete order</string>
    <string name="action_cancel_order">Cancel order</string>
    <string name="action_delete_payment">Delete payment</string>
    <string name="action_cancel_payment">Cancel payment</string>
    <string name="action_delete_refund">Delete refund</string>
    <string name="action_delete_distribs">Delete distribution</string>
    <string name="action_cancel_refund">Cancel refund</string>
    <string name="action_cancel_distribs">Cancel distribs</string>
    <string name="action_delete_closed_orders">Delete closed orders</string>
    <string name="action_delete_closed_documents">Delete closed documents</string>
    <string name="action_delete_closed_payments">Delete closed payments</string>
    <string name="action_show_stats">Show stats</string>
    <string name="action_show_payments_stats">Show payments stats</string>
    <string name="action_data_filter">Filter</string>
    <string name="action_sort_orders">Sort</string>
    <string name="action_create_message">Create message</string>
    <string name="action_create_photo_message">Create photo message</string>
    <string name="action_delete_message">Delete message</string>
    <string name="action_delete_readed_messages">Delete readed messages</string>
    <string name="action_select_agreement">Select agreement</string>
    <string name="action_select_agreement_with_sum">Select agreement with sum</string>
    <string name="action_save">Save</string>
    <string name="action_close">Close</string>
    <string name="action_search">Search</string>
    <string name="action_print_list">Print list</string>
    <string name="action_print_ko">Print KO</string>
    <string name="action_print_both">Print both</string>
    <string name="tab_routes">Routes</string>
    <string name="tab_orders">Orders</string>
    <string name="tab_payments">Payments</string>
    <string name="tab_exchange">Exchange</string>
    <string name="tab_messages">Messages</string>
    <string name="connect">1. Send changes</string>
    <string name="refresh">2. Query all</string>
    <string name="receive">3. Receive</string>
    <string name="query_docs">Query docsuments</string>
    <string name="nomenclature_photos">4. Nom. photos</string>
    <string name="exchange_not_executed">Exchange not executed</string>
    <string name="exchange_ws">Exchange</string>
    <string name="exchange_ws_all">Query all</string>
    <string name="numdoc_new">NEW</string>
    <string name="title_filter">Filter</string>
    <string name="title_query_documents">Query documents</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_order_changed">Order*</string>
    <string name="title_activity_refund">Refund</string>
    <string name="title_activity_refund_changed">Refund*</string>
    <string name="title_activity_distribs">Distribution</string>
    <string name="title_activity_distribs_changed">Distribution*</string>
    <string name="title_activity_clients_list">Clients list</string>
    <string name="title_activity_agreements_list">Agreements list</string>
    <string name="title_activity_agreements30_list">Conventions list</string>
    <string name="title_activity_discounts_list">Discounts list</string>
    <string name="title_activity_agents">Agents list</string>
    <string name="title_activity_curators">Curators list</string>
    <string name="title_activity_contracts">Contracts list</string>
    <string name="title_activity_routes_with_dates">Routes with dates</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_payment_changed">Payment*</string>
    <string name="title_activity_places">Places</string>
    <string name="title_activity_vicarious_powers">Vicarious powers list</string>
    <string name="title_service_operation">Service operation</string>
    <string name="service_operation_state_service_operation">Preparing service operations</string>
    <string name="service_operation_state_recovering_orders">Recovering orders</string>
    <string name="service_operation_state_reindexing">Reindexing</string>
    <string name="label_order">Order</string>
	<string name="label_refund">Refund</string>
	<string name="label_distribs">Distributions</string>
    <string name="label_distribs_short">Distributions</string>
	<string name="label_distribs_time">Time</string>
    <string name="label_date">Date</string>
    <string name="label_shipping_date">Shipping date</string>
    <string name="label_client">Client</string>
    <string name="label_client_address">Clients address</string>
    <string name="label_comment">Comment</string>
    <string name="label_comment_payment">Comment payment</string>
    <string name="label_comment_manager">Manger</string>
    <string name="label_comment_theme">Theme</string>
    <string name="label_convention">Convention</string>
    <string name="label_agreement">Agreement</string>
    <string name="label_trade_point">Trade point</string>
    <string name="label_result">Result</string>
    <string name="label_organization">Organization</string>
    <string name="catalogue_all_clients">&lt;All clients&gt;</string>
    <string name="catalogue_all">&lt;All&gt;</string>
    <string name="catalogue_node">&lt;Node&gt;</string>
    <string name="item_not_set">&lt;Not set&gt;</string>
    <string name="client_not_set">&lt;Client not set&gt;</string>
    <string name="agent_not_set">&lt;Agent not set&gt;</string>
    <string name="agreement_not_set">&lt;Agreement not set&gt;</string>
    <string name="agreement30_not_set">&lt;Convention not set&gt;</string>
    <string name="organization_not_set">&lt;Organization not set&gt;</string>
    <string name="trade_point_not_set">&lt;Trade point not set&gt;</string>
    <string name="curator_not_set">&lt;Curator not set&gt;</string>
    <string name="manager_not_set">&lt;Manager not set&gt;</string>
    <string name="vicarious_power_not_set">&lt;Vicarious power not set&gt;</string>
    <string name="without_discount">Without discount</string>
    <string name="check_box_dont_send">Not ready, don\'t send</string>
    <string name="check_box_orders">Orders</string>
    <string name="check_box_refunds">Refunds</string>
    <string name="check_box_distribs">Distibutions</string>
    <string name="label_price_type">Price type</string>
    <string name="label_stock">Stock</string>
    <string name="label_account">Account</string>
    <string name="label_debt_by_client">By client</string>
    <string name="label_debt_by_agreement">By agreement</string>
    <string name="label_debt">Debt</string>
    <string name="label_debt_past">Debt past</string>
    <string name="label_debt_past30">Debt past+30</string>
    <string name="label_state">State</string>
    <string name="label_curator">Curator</string>
    <string name="label_manager">Manager</string>
    <string name="label_vicarious_power">Vicarious power</string>
    <string-array name="tabs_order">
        <item>Header</item>
        <item>Goods</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="tabs_order_landscape">
        <item>Header+Goods</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="tabs_refund">
        <item>Header</item>
        <item>Goods</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="tabs_refund_landscape">
        <item>Header+Goods</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="tabs_distribs">
        <item>Header</item>
        <item>Distributions</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="tabs_distribs_landscape">
        <item>Header+Distributions</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="tabs_payment">
        <item>Header</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="shipping_type">
        <item>Automobile</item>
        <item>Pickup</item>
    </string-array>
    <string-array name="shipping_time">
        <item>Any time</item>
        <item>Interval</item>
    </string-array>
    <string-array name="filter_time_type">
        <item>Any time</item>
        <item>Date</item>
        <item>Interval</item>
    </string-array>
    <string-array name="documents_period_type">
        <item>Date of document</item>
        <item>Date of service</item>
    </string-array>
    <string name="message_sort_orders">Sort orders</string>
    <string-array name="sort_types_array">
        <item>By documents date</item>
    </string-array>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_date_coord">Date coord</string>
    <string name="check_box_receive_coord">Receive coordinates</string>
    <string name="preferences_server_address_summary">Server address</string>
    <string name="start_date_for_occupied_places">Start date for occupied places</string>
    <string name="preferences_server_address_spare_summary">Server address (spare)</string>
    <string name="preferences_ftp_server_address_title">Address of FTP server</string>
    <string name="preferences_ftp_server_address_spare_title">Address of FTP server (spare)</string>
    <string name="preferences_web_server_address_title">Address of WEB server</string>
    <string name="data_format_summary">Data format</string>
    <string name="data_format_title">Data format</string>
    <string name="data_format_dialog_title">Data format</string>
    <string name="currency_summary">Currency</string>
    <string name="currency_title">Currency</string>
    <string name="currency_dialog_title">Currency</string>
    <string name="app_theme">App theme</string>
    <string name="app_theme_title">App theme</string>
    <string name="app_theme_dialog_title">App theme</string>
    <string name="preferences_server_user_title">User name</string>
    <string name="preferences_server_user_summary">User name for FTP server</string>
    <string name="preferences_server_password_title">Password</string>
    <string name="preferences_server_password_summary">Password for FTP server</string>
    <string name="preferences_server_directory_title">Directory</string>
    <string name="preferences_server_directory_summary">FTP user home directory(if required)</string>
    <string name="hint_empty_log">Log is empty</string>
    <string name="label_no_image">&lt;No image&gt;</string>
    <string name="label_make_photo1">Make photo 1</string>
    <string name="label_make_photo2">Make photo 2</string>
    <string name="action_refresh_route">Refresh route</string>
    <string name="only_not_worked_out">Only not worked out</string>
</resources>