<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sabd="http://schemas.android.com/apk/res-auto" >
    
    <group android:id="@+id/menu_group_orders">

    <item
        android:id="@+id/action_create_order"
        android:orderInCategory="101"
        android:title="@string/action_create_order"
        android:icon="@android:drawable/ic_menu_add"
        sabd:showAsAction="never" />
    <item
        android:id="@+id/action_create_refund"
        android:orderInCategory="102"
        android:title="@string/action_create_refund"
        android:icon="@android:drawable/ic_menu_add"
        sabd:showAsAction="never" />
    
    <item
        android:id="@+id/action_create_distribs"
        android:orderInCategory="103"
        android:title="@string/action_create_distribs"
        android:icon="@android:drawable/ic_menu_add"
        sabd:showAsAction="never" />
    
    <item
        android:id="@+id/action_delete_closed_orders"
        android:orderInCategory="104"
        android:title="@string/action_delete_closed_orders"
        android:icon="@android:drawable/ic_menu_delete"
        sabd:showAsAction="never" />
    
    <item
        android:id="@+id/action_delete_closed_documents"
        android:orderInCategory="105"
        android:title="@string/action_delete_closed_documents"
        android:icon="@android:drawable/ic_menu_delete"
        sabd:showAsAction="never" />
    
    <item
        android:id="@+id/action_show_stats"
        android:orderInCategory="107"
        android:title="@string/action_show_stats"
        android:icon="@android:drawable/ic_menu_agenda"
        sabd:showAsAction="never" />
    
    <item
        android:id="@+id/action_data_filter"
        android:orderInCategory="108"
        android:icon="@drawable/ic_menu_filter"
        android:title="@string/action_data_filter"
        sabd:showAsAction="never" />

    <item
        android:id="@+id/action_data_filter_as_action"
        android:orderInCategory="108"
        android:icon="@drawable/ic_menu_filter"
        android:title="@string/action_data_filter"
        sabd:showAsAction="always" />

    
    <item
        android:id="@+id/action_sort_orders"
        android:orderInCategory="109"
        android:title="@string/action_sort_orders"
        sabd:showAsAction="never" />
    
    </group>
    
    <group android:id="@+id/menu_group_payments">

    <item
        android:id="@+id/action_create_payment"
        android:orderInCategory="101"
        android:title="@string/action_create_payment"
        android:icon="@android:drawable/ic_menu_add"
        sabd:showAsAction="never" />
    
    <item
        android:id="@+id/action_delete_closed_payments"
        android:orderInCategory="102"
        android:title="@string/action_delete_closed_payments"
        android:icon="@android:drawable/ic_menu_delete"
        sabd:showAsAction="never" />
    <item android:id="@+id/action_show_payments_stats" android:orderInCategory="103" android:title="@string/action_show_stats" android:icon="@android:drawable/ic_menu_agenda"></item>
    
    </group>
    
    <group android:id="@+id/menu_group_exchange">
    </group>
    
    <group android:id="@+id/menu_group_messages">
    <item
        android:id="@+id/action_create_message"
        android:orderInCategory="101"
        android:title="@string/action_create_message"
        android:icon="@android:drawable/ic_dialog_email"
        sabd:showAsAction="never"   
    />
    <item
        android:id="@+id/action_create_photo"
        android:orderInCategory="102"
        android:title="@string/action_create_photo_message"
        android:icon="@android:drawable/ic_menu_camera"
        sabd:showAsAction="never" />
    <item
        android:id="@+id/action_delete_readed_messages"
        android:orderInCategory="103"
        android:title="@string/action_delete_readed_messages"
        android:icon="@android:drawable/ic_menu_delete"
        sabd:showAsAction="never" />
    </group>

    <group android:id="@+id/menu_group_routes">
    <item
        android:id="@+id/action_refresh_route"
        android:orderInCategory="101"
        android:title="@string/action_refresh_route"
        android:icon="@drawable/ic_menu_refresh"
        sabd:showAsAction="never"
        />

    <item
        android:id="@+id/action_check_box_only_not_worked_out"
        android:orderInCategory="102"
        android:title="@string/only_not_worked_out"
        sabd:showAsAction="never"
        android:checkable="true"
        />


    </group>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        sabd:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="201"
        android:title="@string/action_backup"
        android:icon="@android:drawable/ic_menu_save"
        sabd:showAsAction="never" />

    <item
        android:id="@+id/action_vacuum_database"
        android:orderInCategory="201"
        android:title="@string/action_acuum_database"
        android:icon="@android:drawable/ic_menu_crop"
        sabd:showAsAction="never" />

    
</menu>