<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewOrderPhoto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_no_image" />

    <Button
        android:id="@+id/buttonMakePhoto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_make_photo1"/>

    <TextView
        android:id="@+id/textViewOrderPhoto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_no_image" />
    
    <Button
        android:id="@+id/buttonMakePhoto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_make_photo2"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_create_order" />

</LinearLayout>
